# spgpu

./: CMakeLists.txt  License.md  README.md
branches/spgpu-geins/doc/: Doxyfile
branches/spgpu-geins/doc/html/: annotated.html  functions.html  functions_func.html  functions_vars.html  group__dia_fun.html  modules.html
branches/spgpu-geins/doc/html/search/: classes_73.html  functions_63.html  search.js  variables_64.js  variables_77.html
branches/spgpu-geins/src/: CMakeLists.txt
branches/spgpu-geins/src/core/: ell.c  ell.h  hdia.cpp  hdia_conv.h  vector.h
branches/spgpu-geins/src/core/kernels/: axy_base.cuh  cnrm2.cu  cscatgath.cu  damax.cu  dasum.cu  ddot.cu  dgeins.cu  dnrm2.cu  dscatgath.cu  ell_csput_base.cuh  ell_dspmv.cu  ell_spmv_base.cuh  hell_cspmv.cu  hell_spmv_base.cuh  hell_sspmv.cu  hell_zspmv.cu  snrm2.cu  sscatgath.cu  zdot.cu  znrm2.cu
branches/spgpu-geins/src/tests/: bdiaPerf.cpp  ctest.c  diaPerf.cpp
branches/spgpu-geins/src/utils/: mmread.cpp  mmread.hpp  mmutils.hpp
doc/: Doxyfile
doc/html/: annotated.html  class_clock.html  classes.html  functions.html  functions_func.html  functions_vars.html  group__conversion_routines.html  group__core_fun.html  group__dia_fun.html  group__ell_fun.html  group__vec_fun.html  index.html  modules.html  structspgpu_handle_struct.html
doc/html/search/: all_63.html  all_63.js  all_77.js  classes_63.html  classes_73.js  functions_67.html  variables_63.js  variables_6d.html
src/: CMakeLists.txt  CMakeLists.txt.new  debug.h
src/core/: coo_conv.h  core.c  core.h  dia.h  dia_conv.h  ell.c  ell.h  ell_conv.h  hdia.c  hdia.cpp  hdia.h  hdia_conv.h  hell.c  hell.h  hell_conv.h  vector.h
src/core/kernels/: abs_base.cuh  asum_base.cuh  axy_base.cuh  bhdia_dspmv.cu  bhdia_sspmv.cu  caxpby.cu  caxy.cu  cdot.cu  cnrm2.cu  cscal.cu  cscatgath.cu  cudadebug.h  cudalang.h  damax.cu  daxpby.cu  daxy.cu  ddot.cu  dia_sspmv.cu  dnrm2.cu  dscal.cu  dscatgath.cu  ell_cspmv.cu  ell_csput_base.cuh  ell_dspmv.cu  ell_spmv_base.cuh  ell_spmv_base_nors.cuh  ell_spmv_base_template.cuh  ell_sspmv.cu  ell_zspmv.cu  hdia_dspmv.cu  hdia_spmv_base_template.cuh  hdia_sspmv.cu  hell_cspmv.cu  hell_dspmv.cu  hell_spmv_base.cuh  hell_spmv_base_template.cuh  hell_sspmv.cu  hell_zspmv.cu  mathbase.cuh  saxpby.cu  (+11 more)
src/tests/: bdiaPerf.cpp  ctest.c  cusparsePerf.cpp  diaPerf.cpp  hellPerf.cpp  testDenseVector.c  testSparseVector.c
src/utils/: mmread.cpp  mmread.hpp  mmutils.hpp  timing.hpp
trunk/doc/: TODO.txt
trunk/doc/html/: annotated.html  class_clock.html  classes.html  functions.html  functions_func.html  functions_vars.html  group__conversion_routines.html  group__core_fun.html  group__dia_fun.html  group__ell_fun.html  group__vec_fun.html  index.html  modules.html  structspgpu_handle_struct.html
trunk/doc/html/search/: all_63.html  all_6d.js  classes_63.js  functions_63.js  functions_67.js  search.js  variables_64.html  variables_6d.html
trunk/src/: CMakeLists.txt  debug.h
trunk/src/core/: core.c  core.h  dia.c  dia_conv.h  ell.h  ell_conv.hpp  hdia.c  hdia.cpp  hdia.h  hdia_conv.h  hell.c  hell.h  hell_conv.hpp  vector.h
trunk/src/core/kernels/: amax_base.cuh  bhdia_dspmv.cu  bhdia_sspmv.cu  cabs.cu  caxy.cu  cudalang.h  daxpby.cu  daxy.cu  ddot.cu  dia_dspmv.cu  dia_spmv_base.cuh  dia_spmv_base_template.cuh  dia_sspmv.cu  dnrm2.cu  dscal.cu  ell_cspmv.cu  ell_csput_base.cuh  ell_dspmv.cu  ell_spmv_base.cuh  ell_spmv_base_nors.cuh  ell_spmv_base_template.cuh  ell_sspmv.cu  ell_zspmv.cu  hdia_dspmv.cu  hdia_spmv_base.cuh  hdia_sspmv.cu  hell_cspmv.cu  hell_dspmv.cu  hell_spmv_base.cuh  hell_spmv_base_template.cuh  hell_sspmv.cu  hell_zspmv.cu  mathbase.cuh  saxpby.cu  saxy.cu  scal_base.cuh  sdot.cu  snrm2.cu  sscal.cu  sscatgath.cu  (+4 more)
trunk/src/tests/: bdiaPerf.cpp  ctest.c  cusparsePerf.cpp  diaPerf.cpp  hellPerf.cpp  testDenseVector.c
trunk/src/utils/: mmread.cpp  timing.hpp
trunk/trunk/src/: CMakeLists.txt
trunk/trunk/src/core/: core.h
trunk/trunk/src/core/kernels/: cudalang.h  daxpby.cu  saxpby.cu
trunk/trunk/src/utils/: timing.hpp
wiki/: BuildingSpgpu.wiki
